<resources>
    <string name="app_name">Прогноз погоды</string>

    //messages
    <string name="data_refreshed">Обновлены данные прогноза погоды</string>

    <string name="alert_dialog_permission_title">Требуется разрешение для геолокации</string>
    <string name="alert_dialog_permission_message">Начиная с Андроид версии 6, система запрашивает разрешения для приложений</string>
    <string name="failed_get_location">Не удалось получить данные геолокации</string>
    <string name="location_is_not_available">Данные геолокации недоступны</string>

    <string name="storage_error_get_location">Сохраненные данные локации не найдены. Используйте название Города</string>

    <string name="failed_internet_connection">Проверьте интернет соединение</string>
    <string name="restricted_internet_connection">Доступ в сеть ограничен</string>

    <string name="invalid_api_key">Некорректный Ключ-идентификатор</string>
    <string name="api_key_updated">Ключ обновлен</string>

    //maket texts
    <string name="tv_forecast">Прогноз погоды на</string>
    <string name="tv_cloudy">Облачно</string>
    <string name="tv_feeling">Ощущается</string>
    <string name="tv_wind">Ветер</string>
    <string name="tv_humidity">Влажность</string>
    <string name="tv_pressure">Давление</string>

    <string name="input_api">Введите ключ:</string>
    <string name="text_api_hint">Ключ-идентификатор</string>

    <string name="search_hint">Название города</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Отмена</string>

    <string name="btn_refresh">Обновить</string>

    <string name="menu_properties">Настройки</string>
    <string name="menu_search">Поиск</string>

    <string name="celcius">%.0f\u00b0C</string>
    <string name="min_max_temp_string">%.0f\u00b0C / %.0f\u00b0C</string>
    <string name="wind_speed">%.1f м/с</string>
    <string name="humidity_value">%d \uff05</string>
    <string name="pressure_value">%d мм</string>

    //tab names
    <string-array name="tab_names">
        <item>На день</item>
        <item>На 5 дней</item>
    </string-array>

    <string name="settings_hint">\u0020\u0020\u0020 Ключ-идентификатор</string>


    <string name="response_error_bad_request">Некорректный запрос.</string>
    <string name="response_error_unauthorised">Пользователь не авторизован.</string>
    <string name="response_error_internal_server_error">Внутренняя ошибка сервера.</string>
    <string name="response_error_service_unavailable">Сервис недоступен.</string>
    <string name="response_error_host_unavailable">Нет доступа к странице \"api.openweathermap.org\"</string>
    <string name="response_error_unknown">Неизвестная ошибка</string>

    <string name="internet_connection_available">Интернет соединение восстановлено</string>

    <string name="response_error_timeout">Превышено время ожидания сервера.</string>
</resources>