<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tab_indicator_active"
    tools:context=".ui.fragments.OneDayForecastFragment">

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_main_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_forecast_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_forecast"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="22dp"
        android:textColor="@color/color_gray_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:textSize="24sp"
        android:textColor="@color/ok_color"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_forecast_day"
        tools:text="21.11.2024 18:00"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cv_additional"
        >
        <LinearLayout
            android:id="@+id/ll_main_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <TextView
                android:id="@+id/tv_day_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_gray_light"
                android:textSize="48sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="24dp"
                tools:text="-14^C"
                />

            <LinearLayout
                android:id="@+id/ll_min_max_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerLinearStyle"
                >

                <TextView
                    android:id="@+id/tv_min_max_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    tools:text="-15 / -12 C"
                    />

                <TextView
                    android:id="@+id/tv_weather_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    tools:text="Облачно"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_feeling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerLinearStyle"
                >

                <TextView
                    android:id="@+id/tv_feeling_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    android:text="@string/tv_feeling"
                    tools:text="Ощущается"
                    />

                <TextView
                    android:id="@+id/tv_feeling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    tools:text="-20^C"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_additional"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/CardViewStyle"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="@id/cv_main_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_main_data"
        app:layout_constraintBottom_toBottomOf="@id/cv_main_data"
        >
        <LinearLayout
            android:id="@+id/ll_additional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            >
            <LinearLayout
                android:id="@+id/ll_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerLinearStyle"
                >

                <TextView
                    android:id="@+id/tv_wind_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    android:text="@string/tv_wind"
                    />

                <TextView
                    android:id="@+id/tv_wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    tools:text="5 -10 m/s"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerLinearStyle">

                <TextView
                    android:id="@+id/tv_humidity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    android:text="@string/tv_humidity"
                    />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    tools:text="100 %"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InnerLinearStyle"
                >

                <TextView
                    android:id="@+id/tv_pressure_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    android:text="@string/tv_pressure"
                    />

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardTextViewStyle"
                    tools:text="1040 мм"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_main_data"
        />
</androidx.constraintlayout.widget.ConstraintLayout>